classDiagram
  class Authortype {
    -String firstname
    -String lastname
    -int birthyear
    -String biography
    -Id authorid
    +getFirstname() String
    +setFirstname(String) void
    +getLastname() String
    +setLastname(String) void
    +getBirthyear() int
    +setBirthyear(int) void
    +getBiography() String
    +setBiography(String) void
    +getAuthorid() Id
    +setAuthorid(Id) void
  }
  class Booktype {
    -String title
    -List<Authortype> author
    -Isbntype isbn
    -int publishedyear
    -Categorytype category
    -BigDecimal price
    -String description
    -boolean instock
    -Id bookid
    -int edition
    +getTitle() String
    +setTitle(String) void
    +getAuthor() List<Authortype>
    +setAuthor(List<Authortype>) void
    +getIsbn() Isbntype
    +setIsbn(Isbntype) void
    +getPublishedyear() int
    +setPublishedyear(int) void
    +getCategory() Categorytype
    +setCategory(Categorytype) void
    +getPrice() BigDecimal
    +setPrice(BigDecimal) void
    +getDescription() String
    +setDescription(String) void
    +getInstock() boolean
    +setInstock(boolean) void
    +getBookid() Id
    +setBookid(Id) void
    +getEdition() int
    +setEdition(int) void
  }
  class Bookstoretype {
    -String storename
    -String address
    -List<Booktype> book
    -String storeid
    -LocalDate established
    +getStorename() String
    +setStorename(String) void
    +getAddress() String
    +setAddress(String) void
    +getBook() List<Booktype>
    +setBook(List<Booktype>) void
    +getStoreid() String
    +setStoreid(String) void
    +getEstablished() LocalDate
    +setEstablished(LocalDate) void
  }
  class Bookstore {
  }
  class Author {
  }
  class Book {
  }
   <|-- Authortype : extends
   <|-- Booktype : extends
  Authortype *-- Booktype : author
   <|-- Bookstoretype : extends
  Booktype *-- Bookstoretype : book